[package]
name = "rasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ab_glyph = "0.2.23"
ab_glyph_rasterizer = "0.1.8"
jpeg-encoder = "0.6.0"
png = "0.17.13"
resize = "0.8.4"
rgb = "0.8.37"
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.10"
zune-core = "0.4.12"
zune-jpeg = "0.4.11"
zune-png = "0.4.10"
