[package]
name = "rasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#image = { version = "0.25.0", default-features = false, features = ["png", "jpeg"] }
file-format = "0.24.0"
jpeg-encoder = "0.6.0"
#palette = "0.7.5"
png = "0.17.13"
rand = "0.8.5"
resize = "0.8.4"
rgb = "0.8.37"
serde = { version = "1.0.197", features = ["derive"] }
swash = "0.1.12"
toml = "0.8.10"
#zeno = "0.3.1"
zune-core = "0.4.12"
zune-jpeg = "0.4.11"
zune-png = "0.4.10"
svg = "0.16.0"
ziyy = "0.1.0"
